# thresher

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  config.example.yaml  docker-compose.functional.yaml  pr-draft.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.sandbox/: Dockerfile  README.md  download-models.py  proxy-config.json  sandbox-init.sh  setup-ca-bundle.sh  start-services.sh
.specify/memory/: constitution.md
docs/: architecture.md
mcp-server/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
mcp-server/src/mcp_server_qdrant/: config_gen.py  main.py  mcp_server.py  qdrant.py  server.py  settings.py  thresher_config.py
mcp-server/src/mcp_server_qdrant/common/: wrap_filters.py
mcp-server/src/mcp_server_qdrant/embeddings/: factory.py  fastembed.py
mcp-server/tests/: test_config_gen.py  test_fastembed_integration.py  test_multi_collection.py  test_prefix_handling.py  test_qdrant_integration.py  test_settings.py  test_thresher_config.py
scripts/: find_oversized_chunks.py
specs/005-queue-runner-rebuild/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-queue-runner-rebuild/checklists/: requirements.md
specs/005-queue-runner-rebuild/contracts/: config-schema.md  destination-provider.md  queue-batch.schema.json  source-provider.md
specs/006-parallel-archive-expansion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-parallel-archive-expansion/checklists/: requirements.md
specs/006-parallel-archive-expansion/contracts/: expansion-job.md
specs/007-multi-model-embedding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-multi-model-embedding/checklists/: requirements.md
specs/007-multi-model-embedding/contracts/: config-schema.md  interfaces.md
tests/functional/: conftest.py  test_expansion_e2e.py  test_gcs_provider.py  test_k8s_orchestrator.py  test_pipeline_e2e.py  test_qdrant_provider.py
tests/unit/: test_archive_expander.py  test_chunkers.py  test_classifier.py  test_cli.py  test_code_chunker.py  test_config.py  test_config_schema.py  test_controller.py  test_custom_detectors.py  test_embedder.py  test_expansion_orchestrator.py  test_k8s_orchestrator.py  test_logging_config.py  test_memory_monitor.py  test_polish.py  test_providers_gcs.py  test_providers_qdrant.py  test_router.py  test_runner.py  test_runner_resilience.py  test_skip_list.py  test_status.py  test_types.py  test_url_resolver.py
thresher/: __main__.py  cli.py  config.py  config_schema.json  defaults.yaml  embedder.py  logging_config.py  types.py  url_resolver.py
thresher/controller/: archive_expander.py  expansion_orchestrator.py  k8s_orchestrator.py  queue_builder.py  scanner.py  status.py
thresher/processing/: classifier.py  router.py
thresher/processing/chunkers/: chonkie_code.py  chonkie_recursive.py  docling_hybrid.py  mumps_label.py
thresher/processing/extractors/: docling.py  raw_text.py
thresher/providers/: destination.py  gcs.py  qdrant.py  source.py
thresher/runner/: loop.py  memory_monitor.py  processor.py
